<resources>
    <string name="app_name">UzBankCard</string>
    <string name="til_tanlash">Til tanlash</string>
    <string name="phone_number">97 778 35 33</string>
    <string name="first_name">Ism</string>
    <string name="title_next">Keyingisi</string>
    <string name="agree_terms_of_use">Malumotlardan foydalanishga roziman</string>
    <string name="password">Parol</string>
    <string name="error_name_req">Ism xato!</string>
    <string name="error_phone_req">Telefon raqam 9 ta raqam bulishi shart!</string>
    <string name="error_password_req">Parol 8 raqamdan kam bulmasligi kerak</string>
    <string name="error_terms_of_use_agreement">Foydalanish shartlariga rozilik bering!</string>
    <string name="error_singin_name">Ism xato</string>
    <string name="error_singin_pass">parol xato</string>
    <string name="tv_code_get">Parolni unitdingizmi</string>
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_payments">tulov</string>
    <string name="title_cards">kartalar</string>
    <string name="title_map">xarita</string>
    <string name="title_report">Hisobot</string>
    <string name="home_title_plus">qo\'shish</string>
    <string name="card_add_number">#### #### #### ####</string>
    <string name="ed_date_year">**/**</string>
    <string name="toolbar_add_card">Karta qo\'shish</string>
    <string name="card_number">karta raqami</string>
    <string name="card_interval"> ** / ** </string>
    <string name="search_button">izlash</string>
    <string name="error_offline">Internetda uzilish</string>
    <string name="addcard_toolbar">Qo\'shish</string>
    <string name="tv_payments_fragment">To\'lovlar</string>
    <string name="money_report">soumma</string>
    <string name="card_report_payment">Izlash</string>
    <string name="payment_home">saqlangan to\'lovlar</string>
    <string name="title_activity_maps">Map</string>
    <string name="error_singin">oldin ro\'yxatdan uting</string>
    <string name="offline_internet">Internet bilan aloqa yuq</string>
    <string name="error_servis">"servisda xatolik "</string>
    <string name="code_save">SAQLASH</string>
    <string name="code_open">Kirish uchun kod</string>
    <string name="cade_error">kod xato</string>
    <string name="home_setting">sozlamalar</string>
    <string name="home">B Fido Biznes</string>
    <string name="add_card">karta raqami yoki muddati xato</string>
    <string name="dialog_code">kodini kiriting</string>
    <string name="mondey_dialog">summa</string>
    <string name="positiv_dialog">To\'lov</string>
    <string name="negativ_dialog">Yopish</string>
    <string name="update_payment">"malumotlar xato "</string>
    <string name="cards_list">Kartalar</string>
    <string name="card_update">to\'lash</string>
    <string name="map_title">Xarita</string>
    <string name="card_color">oldin kartani tanlang</string>
    <string name="main_payment">To\'lovlar uchun</string>
    <string name="delete">Uchirish</string>
    <string name="card_blog">kartani biloklash</string>
    <string name="isnull_edittext">karta raqami va muddatini kiriting</string>
    <string name="add_card_color">oldin karta kiritng</string>
    <string name="bloc_card">Karta bloklandi</string>
    <string name="vertical">ko\'rinish</string>
    <string name="dialog_nocard">"karta kiritilmagan "</string>
    <string name="dialog_delete">Mofaqiyatli o\'chirildi</string>
    <string name="dialog_save">"To'lovlar shu kartadan amalga oshiriladi "</string>
    <string name="dialog_save_error">Karta hali mavjud emas</string>
</resources>