<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_navigation"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/payments_navigation"
        android:icon="@drawable/ic_payments_icon"
        android:title="@string/title_payments" />

    <item
        android:id="@+id/cards_navigation"
        android:icon="@drawable/ic_card_icon"
        android:title="@string/title_cards" />
 <item
     android:id="@+id/report_navigation"
     android:title="@string/title_report"
     android:icon="@drawable/ic_report_icon"/>
    <item
        android:id="@+id/map_navigation"
        android:title="@string/title_map"
        android:icon="@drawable/ic_map_icon"/>


</menu>