<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_singup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_700"
            android:elevation="0dp"
            app:navigationIcon="@drawable/ic_back_24" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/purple_700"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_singup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="Parol  \nyaratish"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_wave_singup" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/til_singup_call"
            android:textColorHint="@android:color/black"
            app:hintTextColor="@color/black"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_call_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gb_call_singup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@android:color/black"
                android:digits="+() 123456789"
                android:hint="@string/phone_number"
                android:theme="@style/Widget.Design.TextInputLayout"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="17"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:errorEnabled="true"
            android:id="@+id/til_singup_name"
            android:theme="@style/Widget.Design.TextInputLayout"
            android:textColorHint="@android:color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_people_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gb_name_singup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@android:color/black"
                android:hint="@string/first_name"
                android:lines="1"
                android:imeOptions="actionNext"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_sinup_pass"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:theme="@style/Widget.Design.TextInputLayout"
            android:textColorHint="@android:color/black"
            app:hintTextColor="@color/black"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            app:passwordToggleTint="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/gb_pass_singup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@android:color/black"
                android:hint="@string/password"
                android:lines="1"
                android:imeOptions="actionNext"
                android:inputType="numberPassword"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/mchb_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/agree_terms_of_use" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/gb_next_singup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:enabled="false"
            android:text="@string/title_next"
            android:textColor="@color/button_text"
            android:background="@drawable/btn_color_enabled"
            app:cornerRadius="10dp"
            app:pressedGlowSize="10dp"
            app:unpressedGlowSize="5dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>