<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/report_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/top_code_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <io.armcha.elasticview.ElasticView
        android:id="@+id/image_elasticview_report"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:flexibility="10"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/report_toolbar"
        android:background="@drawable/bank_card_look"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/bank_card_look"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/report_card_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/icon_bank_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/report_add_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/report_card_image"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/report_add_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:lines="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/report_add_money"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/report_add_date_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:lines="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/report_add_number"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/report_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:lines="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/report_add_date_year"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/report_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:lines="1"
                app:layout_constraintTop_toBottomOf="@+id/report_add_date_year"
                app:layout_constraintStart_toEndOf="@id/report_firstname"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </io.armcha.elasticview.ElasticView>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Design.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/til_report_card_number"
        app:layout_constraintTop_toBottomOf="@+id/image_elasticview_report"
        android:theme="@style/Widget.Design.TextInputLayout"
        android:textColorHint="@android:color/black"
        app:hintTextColor="@color/black"
        app:endIconDrawable="@drawable/credit_card_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_report_card_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@android:color/black"
            android:hint="@string/card_number"
            android:lines="1"
            android:maxLength="19"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_report_card_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_report_card_number"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:lines="1"
        android:inputType="number"
        android:maxLength="5"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/card_interval"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_report_card_money"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_report_card_number"
        app:layout_constraintStart_toEndOf="@+id/ed_report_card_interval"
        android:layout_marginTop="20dp"
        android:lines="1"
        android:inputType="number"
        android:maxLength="5"
        android:visibility="invisible"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/money_report"
        />

    <com.sanojpunchihewa.glowbutton.GlowButton
        android:id="@+id/gb_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ed_report_card_money"
        android:layout_marginTop="20dp"
        app:buttonColor="@color/purple_1000"
        app:cornerRadius="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:text="@string/card_report_payment"/>

</androidx.constraintlayout.widget.ConstraintLayout>